--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app"
   },
-  "author": "",
+  "author": "Qyaho",
   "license": "ISC",
   "dependencies": {
     "@auth0/angular-jwt": "^5.0.2",
