--- a/qradmin/angular.json
+++ b/qradmin/angular.json
@@ -81,7 +81,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "qyaho:build"
+            "browserTarget": "qyaho:build",
+            "port": 4300
           },
           "configurations": {
             "production": {
